# de

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  LICENSE  OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  TROUBLESHOOTING.md  demo.py  docker-compose.yml  eslint.config.mjs  main.py  package-lock.json  package.json  requirements.txt  setup-demo.sh  setup.sh
app/: layout.tsx  page.tsx
components/: Disclaimer.tsx  StrainCard.tsx  StrainFinder.tsx
lib/: fetcher.ts  recommendations.ts
mm-bot/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mm-bot/.github/workflows/: ci.yml
mm-bot/configs/: default.yaml  venues.yaml
mm-bot/src/bot/: __init__.py
mm-bot/src/bot/basis/: __init__.py  funding.py
mm-bot/src/bot/cli/: quickstart.py  run_backtest.py  run_mm.py
mm-bot/src/bot/connectors/: __init__.py  cex_ccxt.py  dex_stub.py
mm-bot/src/bot/core/: config.py  events.py  metrics.py  types.py  utils.py
mm-bot/src/bot/data/: feeds.py  storage.py
mm-bot/src/bot/exec/: router.py  twap.py  vwap.py
mm-bot/src/bot/hedge/: __init__.py  hedger.py
mm-bot/src/bot/mm/: __init__.py  quoter.py
mm-bot/src/bot/models/: avellaneda_stoikov.py  hawkes_stub.py
mm-bot/src/bot/risk/: __init__.py  kill_switch.py  limits.py  orphan_reaper.py
mm-bot/src/bot/signals/: __init__.py  impact.py  microstructure.py  volatility.py
mm-bot/tests/e2e/: test_paper_mode.py
mm-bot/tests/unit/: test_avellaneda.py  test_avellaneda_property.py  test_config.py  test_microstructure.py  test_risk.py
prisma/: schema.prisma
scripts/: seed.ts
src/: __init__.py  (+5 more)
(+7 files in other folders)
