[tool.poetry]
name = "mm-bot"
version = "0.1.0"
description = "Cross-venue crypto market making bot"
authors = ["Quant Dev <quant@example.com>"]
readme = "README.md"
packages = [{ include = "bot", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
ccxt = "^4.1.59"
websockets = "^12.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
numba = "^0.59.1"
pydantic = "^2.7.1"
pyyaml = "^6.0.1"
tenacity = "^8.2.3"
uvloop = { version = "^0.19.0", markers = "platform_system != 'Windows'" }
orjson = "^3.10.3"
click = "^8.1.7"
prometheus-client = "^0.20.0"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
asyncio = "^3.4.3"
scipy = "^1.13.1"
statsmodels = "^0.14.2"
clickhouse-connect = { version = "^0.7.9", optional = true }
aiosqlite = "^0.20.0"

[tool.poetry.extras]
storage = ["clickhouse-connect"]

[tool.poetry.dev-dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
mypy = "^1.10.0"
ruff = "^0.4.4"
black = "^24.4.2"
pre-commit = "^3.7.0"
hypothesis = "^6.102.7"

[tool.poetry.scripts]
bot-mm = "bot.cli.run_mm:main"
bot-backtest = "bot.cli.run_backtest:main"
bot-quickstart = "bot.cli.quickstart:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ANN"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict = true
mypy_path = "src"
explicit_package_bases = true
packages = ["bot"]

[tool.pytest.ini_options]
addopts = "-q"
